# gst-plugins-bad

./: configure.ac
docs/plugins/: gst-plugins-bad-plugins.args  gst-plugins-bad-plugins.hierarchy  gst-plugins-bad-plugins.interfaces
ext/dash/: Makefile.am  Makefile.am.rej  gstdashmanager.c  gstdashmanager.h  gstdashsink.c  gstplugin.c
ext/dash/mpd/: gstmediapresentation.c  gstxmlhelper.c
gst-libs/gst/: Makefile.am
gst-libs/gst/baseadaptive/: Makefile.am  gstadaptivefragment.c  gstadaptivefragment.h  gstbaseadaptivesink.c  gstbaseadaptivesink.c.orig  gstbaseadaptivesink.h  gststreamsmanager.c  gststreamsmanager.h
